--- a/app/src/main/res/layout/pokemon_list_view.xml
+++ b/app/src/main/res/layout/pokemon_list_view.xml
@@ -3,11 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#00CECECE"
+    android:paddingLeft="4dp"
+    android:paddingTop="10dp"
+    android:paddingRight="4dp"
+    android:paddingBottom="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
@@ -16,32 +21,52 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/pokemonImage"
-                android:layout_width="96px"
-                android:layout_height="96px"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:id="@+id/imageView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ditto" />
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="8"
                 android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/pokemonName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Pokemon Name" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/pokemonName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"
+                        android:fontFamily="monospace"
+                        android:padding="2dp"
+                        android:text="Pokemon Name"
+                        android:textSize="18sp" />
+
+                    <ImageView
+                        android:id="@+id/favourite"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:padding="2dp"
+                        app:srcCompat="@drawable/ic_star_unchecked" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
                     <ImageView
                         android:id="@+id/imageView5"
                         android:layout_width="2dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
+                        android:padding="3dp"
                         app:srcCompat="@drawable/ic_hp" />
 
                     <TextView
@@ -49,13 +74,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:fontFamily="monospace"
+                        android:padding="3dp"
                         android:text="HP" />
 
                     <ImageView
                         android:id="@+id/imageView4"
                         android:layout_width="2dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
+                        android:padding="3dp"
                         app:srcCompat="@drawable/ic_speed" />
 
                     <TextView
@@ -63,13 +91,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:fontFamily="monospace"
+                        android:padding="3dp"
                         android:text="Speed" />
 
                     <ImageView
                         android:id="@+id/imageView3"
                         android:layout_width="2dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
+                        android:padding="3dp"
                         app:srcCompat="@drawable/ic_attack" />
 
                     <TextView
@@ -77,13 +108,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:fontFamily="monospace"
+                        android:padding="3dp"
                         android:text="Attack" />
 
                     <ImageView
                         android:id="@+id/imageView2"
                         android:layout_width="2dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
+                        android:padding="3dp"
                         app:srcCompat="@drawable/ic_shield" />
 
                     <TextView
@@ -91,47 +125,57 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:fontFamily="monospace"
+                        android:padding="3dp"
                         android:text="Defense" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/pokemonType1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:background="@color/typeBug"
+                        android:fontFamily="monospace"
+                        android:padding="3dp"
+                        android:shadowColor="@color/colorPrimaryDark"
+                        android:shadowDx="1"
+                        android:shadowDy="1"
+                        android:shadowRadius="2"
+                        android:text="Type One"
+                        android:textAlignment="center"
+                        android:textColor="#ffffff" />
+
+                    <TextView
+                        android:id="@+id/pokemonType2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:background="@color/typeDragon"
+                        android:fontFamily="monospace"
+                        android:padding="3dp"
+                        android:shadowColor="@color/colorPrimaryDark"
+                        android:shadowDx="1"
+                        android:shadowDy="1"
+                        android:shadowRadius="2"
+                        android:text="Type Two"
+                        android:textAlignment="center"
+                        android:textColor="#ffffff" />
+
+                    <Space
+                        android:layout_width="96px"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:padding="10dp" />
                 </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <Space
-                android:layout_width="96px"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/pokemonType1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/typeBug"
-                android:shadowColor="@color/colorPrimaryDark"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
-                android:text="Type One"
-                android:textColor="#ffffff" />
-
-            <TextView
-                android:id="@+id/pokemonType2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/typeDragon"
-                android:shadowColor="@color/colorPrimaryDark"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
-                android:text="Type Two"
-                android:textColor="#ffffff" />
         </LinearLayout>
 
     </LinearLayout>
