--- a/app/src/main/res/drawable/ic_star_unchecked.xml
+++ b/app/src/main/res/drawable/ic_star_unchecked.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="15dp"
-    android:height="15dp"
+    android:width="18sp"
+    android:height="18sp"
     android:viewportWidth="511.99875"
     android:viewportHeight="511">
   <path
