--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -34,5 +34,6 @@
         android:name="com.example.pokeapi.ui.four.GenerationFourFragment"
         android:label="@string/menu_share"
         tools:layout="@layout/fragment_share" />
+    <fragment android:id="@+id/placeholder" />
 
 </navigation>
