--- a/app/src/main/res/layout/pokemon_list_view.xml
+++ b/app/src/main/res/layout/pokemon_list_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="wrap_content"
     android:background="#00CECECE"
     android:paddingLeft="4dp"
     android:paddingTop="10dp"
@@ -34,7 +34,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
@@ -169,7 +169,7 @@
 
                     <Space
                         android:layout_width="96px"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0px"
                         android:layout_weight="4"
                         android:padding="10dp" />
                 </LinearLayout>
