--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,13 @@
         android:id="@+id/nav_home"
         android:name="com.example.pokeapi.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/nav_to_pokemon"
+            app:destination="@id/placeholder"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_gallery"
@@ -34,6 +40,10 @@
         android:name="com.example.pokeapi.ui.four.GenerationFourFragment"
         android:label="@string/menu_share"
         tools:layout="@layout/fragment_share" />
-    <fragment android:id="@+id/placeholder" />
+    <fragment
+        android:id="@+id/placeholder"
+        android:name="com.example.pokeapi.ui.pokemon.PokemonFragment"
+        android:label="Pokemon"
+        tools:layout="@layout/pokemon_view_fragment" />
 
 </navigation>
