--- a/app/src/main/res/layout/pokemon_list_view.xml
+++ b/app/src/main/res/layout/pokemon_list_view.xml
@@ -133,11 +133,13 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp">
 
                     <TextView
                         android:id="@+id/pokemonType1"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:background="@color/typeBug"
@@ -153,7 +155,7 @@
 
                     <TextView
                         android:id="@+id/pokemonType2"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:background="@color/typeDragon"
@@ -167,11 +169,6 @@
                         android:textAlignment="center"
                         android:textColor="#ffffff" />
 
-                    <Space
-                        android:layout_width="96px"
-                        android:layout_height="0px"
-                        android:layout_weight="4"
-                        android:padding="10dp" />
                 </LinearLayout>
 
             </LinearLayout>
