--- a/app/src/main/res/layout/pokemon_view_fragment.xml
+++ b/app/src/main/res/layout/pokemon_view_fragment.xml
@@ -163,7 +163,7 @@
 
                 <TextView
                     android:id="@+id/pokemonType1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:background="@color/typeBug"
@@ -180,7 +180,7 @@
 
                 <TextView
                     android:id="@+id/pokemonType2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:background="@color/typeDragon"
